--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Creative Portfolio</title>
+    <title>Aman Kumar - Designer</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     </head>
@@ -22,15 +22,15 @@
     <main>
         <section id="intro" class="section intro-section">
             <div class="intro-content">
-                <h1 class="intro-name">Your Name</h1>
-                <p class="intro-profession">Web Developer & 3D Enthusiast</p>
-                <p class="intro-interests">Passionate about creating interactive web experiences, exploring generative art, and pushing the boundaries of front-end technology.</p>
+                <h1 class="intro-name">Aman Kumar</h1>
+                <p class="intro-profession">Web Designer & 3D Enthusiast</p>
+                <p class="intro-interests">Passionate about creating interactive web experiences, exploring generative art, and pushing the boundaries of creativity & technology.</p>
                 <a href="#projects" class="cta-button">View My Work</a>
             </div>
             <div class="intro-visual">
                 <div class="cube-container">
                     <div class="cube">
-                        <div class="face front">Dev</div>
+                        <div class="face front">Des</div>
                         <div class="face back">Art</div>
                         <div class="face right">Code</div>
                         <div class="face left">UX</div>
